<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="email">eMail</string>
    <string name="clave">Password</string>
    <string name="clave_confirmar">Repeat password</string>

    <string name="enter_lbl">Input login</string>
    <string name="login_google">Or login with Google</string>
    <string name="login">Log in</string>
    <string name="login_error">Wrong user or password</string>
    <string name="login_error_google">Google account failed</string>
    <string name="login_empty">User or password empty</string>
    <string name="login_ok">Welcome %s</string>

    <string name="signin_btn">Create Account</string>
    <string name="signin_lbl">Create a new account</string>
    <string name="signin_ok">You have just registered! \n Now check your email</string>
    <string name="signin_bad_pass">Notice that both passwords must be filled and equal!</string>
    <string name="signin_empty">User and password must be filled in</string>
    <string name="signin_error">There was a fault while \n registering the user \n Try again, please.</string>

    <string name="recover_btn">Recover</string>
    <string name="recover_lbl">Recover your password</string>
    <string name="recover_ok">An email to recover your \n password was sent to you</string>
    <string name="recover_error">There was a fault while \n recovering the user\'s account</string>
    <string name="recover_empty">Field eMail must be filled</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>